--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,14 @@ known
 extras/metazoa/
 metazoa/
 hs_scaffolds/
+Scaffolds_investigation.ipynb
+cgp_exec.py.orig
+cgp_exec_BACKUP_4055.py
+cgp_exec_BASE_4055.py
+cgp_exec_LOCAL_4055.py
+cgp_exec_REMOTE_4055.py
+extras/all_blasts.py.orig
+extras/hits_dictionary.py.orig
+hoxes_mm_evx/
+one_sample/
+scaffolds_out/
