add git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,51 +1,1 @@
-.idea
-.ipynb_checkpoints
-cgp_candidates.ipynb
-extras/hs_scaffolds/intermediates
-run_evals.sh
-__pycache__
-argparse
-cgp_out
-ensembl*
-eval*
-extras/annotation.csv
-extras/builds.txt
-extras/coding_no_overlap.csv
-extras/hs_builds
-extras/hs_scaffolds/*.csv
-extras/hs_scaffolds/*.gff3
-extras/hs_scaffolds/*.fa
-extras/hs_scaffolds/all_seqs.*
-extras/hs_scaffolds/blasts
-extras/hs_scaffolds/scaffolds*
-extras/species*
-glyc
-invertebrates*
-matas
-meh
-multis
-ncbi*
-queries
-sample_query
-notes
-known
-extras/metazoa/
-metazoa/
-hs_scaffolds/
-Scaffolds_investigation.ipynb
-cgp_exec.py.orig
-cgp_exec_BACKUP_4055.py
-cgp_exec_BASE_4055.py
-cgp_exec_LOCAL_4055.py
-cgp_exec_REMOTE_4055.py
-extras/all_blasts.py.orig
-extras/hits_dictionary.py.orig
-hoxes_mm_evx/
-one_sample/
-scaffolds_out/
-globins_metazoa/
-hox_metazoa.ipynb
-hox_metazoa/
-metazoa_out/
-p_atlas_similarity.ipynb
-timing/
+.idea/
