working example with htseq. merging pending

--- a/config.json
+++ b/config.json
@@ -5,5 +5,7 @@
         "out_dir": "./out_sample"
     },
     "feat_type": "gene",
-    "top_level_feat": "chromosome"
+    "top_level_feat": "chromosome",
+    "samples": 1000,
+    "percentile_threshold": 95
 }
